...
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/readiness_screen_description"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/environmentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/environment_hint"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/apiBaseUrlInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/api_base_url_hint"
            android:inputType="textUri"
...
